Tidy up some SASS code and made it so the "See Review" Button works

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <div class="info-container">
                 <h1>The Pink <br> Coffee Corner</h1>
                 <h3>Best coffee in Melbourne</h3>
-                <button>See reviews</button>
+                <button>
+                  <a href="#reviews">See Reviews</a>
+                </button>
             </div>
         </div>
         <div class="hero-img">
@@ -132,7 +134,7 @@
         </div>
     </section>
       
-    <section class="review">
+    <section class="review" id="reviews">
         <h1>Reviews</h1>
         <div class="review-container">
             <div class="review-item">
